# jaworski-cellseg

./: README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: publish.yml
jaworski_cellseg/: __init__.py  binary_maps_widget.py  config.yaml  configuration_widget.py  jwski_widget.py  label_counting_widget.py  load_data_widget.py  napari.yaml  pre_process_data_widget.py  subregion_selection_widget.py
jaworski_cellseg/config/: config.yaml
jaworski_cellseg/tests/: test_widgets.py
