[metadata]
name = jaworski_cellseg
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    qtpy

[options.entry_points]
napari.manifest =
    jaworski_cellseg = jaworski_cellseg:napari.yaml

# make sure it gets included in your package
[options.package_data]
jaworski_cellseg = napari.yaml